{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 729,
  "lineage": "be8ebbdc-d4c0-c6a0-ffdb-a80d00cdd4c8",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "a03_be_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068510ecc618e49e3",
            "arn": "arn:aws:ec2:us-west-2:327820480203:instance/i-0815332fe185958d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0815332fe185958d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040cda1f4b1657c74",
            "private_dns": "ip-192-168-1-248.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.248",
            "public_dns": "ec2-18-237-171-127.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.171.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00afd8bef6e17011d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0973706376535f7f4",
            "tags": {
              "Name": "a03_be_ec2"
            },
            "tags_all": {
              "Name": "a03_be_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001f942907d189a84"
            ]
          },
          "dependencies": [
            "module.ec2_instances.aws_key_pair.local_key",
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.my_vpc.aws_subnet.a03_be_subnet",
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_be_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "a03_web_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068510ecc618e49e3",
            "arn": "arn:aws:ec2:us-west-2:327820480203:instance/i-0bbd481af7206568a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbd481af7206568a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb93bb116fa59686",
            "private_dns": "ip-192-168-2-174.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.174",
            "public_dns": "ec2-34-222-253-15.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.253.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04326a418e34a739f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ea3cf6d3ea1ac81",
            "tags": {
              "Name": "a03_web_ec2"
            },
            "tags_all": {
              "Name": "a03_web_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035ae3a1eaf9bd74a"
            ]
          },
          "dependencies": [
            "module.ec2_instances.aws_key_pair.local_key",
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.my_vpc.aws_subnet.a03_web_subnet",
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "a03_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:internet-gateway/igw-0f72f120aed92a014",
            "id": "igw-0f72f120aed92a014",
            "owner_id": "327820480203",
            "tags": {
              "Name": "a03_gw"
            },
            "tags_all": {
              "Name": "a03_gw"
            },
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f72f120aed92a014",
            "id": "r-rtb-0443a28ec6d3a2dd81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0443a28ec6d3a2dd8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.a03_gw",
            "module.my_vpc.aws_route_table.a03_route",
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "a03_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:route-table/rtb-0443a28ec6d3a2dd8",
            "id": "rtb-0443a28ec6d3a2dd8",
            "owner_id": "327820480203",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f72f120aed92a014",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "a03_route"
            },
            "tags_all": {
              "Name": "a03_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a03_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fea14187e895ea5",
            "route_table_id": "rtb-0443a28ec6d3a2dd8",
            "subnet_id": "subnet-0973706376535f7f4"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.a03_route",
            "module.my_vpc.aws_subnet.a03_be_subnet",
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a03_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea0aea5db232f7cf",
            "route_table_id": "rtb-0443a28ec6d3a2dd8",
            "subnet_id": "subnet-04f455ebc2b84db06"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.a03_route",
            "module.my_vpc.aws_subnet.a03_db_1_subnet",
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a03_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940401260cd85ebb",
            "route_table_id": "rtb-0443a28ec6d3a2dd8",
            "subnet_id": "subnet-0e8f7118ce406e97d"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.a03_route",
            "module.my_vpc.aws_subnet.a03_db_2_subnet",
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a03_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ce057c7ef7d0eae",
            "route_table_id": "rtb-0443a28ec6d3a2dd8",
            "subnet_id": "subnet-05ea3cf6d3ea1ac81"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.a03_route",
            "module.my_vpc.aws_subnet.a03_web_subnet",
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a03_be_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:subnet/subnet-0973706376535f7f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0973706376535f7f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "327820480203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a03_be_subnet"
            },
            "tags_all": {
              "Name": "a03_be_subnet"
            },
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a03_db_1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:subnet/subnet-04f455ebc2b84db06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f455ebc2b84db06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "327820480203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a03_db_1_subnet"
            },
            "tags_all": {
              "Name": "a03_db_1_subnet"
            },
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a03_db_2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:subnet/subnet-0e8f7118ce406e97d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f7118ce406e97d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "327820480203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a03_db_2_subnet"
            },
            "tags_all": {
              "Name": "a03_db_2_subnet"
            },
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a03_web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:subnet/subnet-05ea3cf6d3ea1ac81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ea3cf6d3ea1ac81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "327820480203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "a03_web_subnet"
            },
            "tags_all": {
              "Name": "a03_web_subnet"
            },
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "a03_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:vpc/vpc-0fe259d19fb37935e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0627837e2c9d63399",
            "default_route_table_id": "rtb-0069343ffe073191b",
            "default_security_group_id": "sg-0df031ba32e5ce1e4",
            "dhcp_options_id": "dopt-06f0fc015ffa9aaea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe259d19fb37935e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0069343ffe073191b",
            "owner_id": "327820480203",
            "tags": {
              "Name": "a03_vpc"
            },
            "tags_all": {
              "Name": "a03_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "a03_be_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group/sg-001f942907d189a84",
            "description": "allow ssh from home and work",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001f942907d189a84",
            "ingress": [
              {
                "cidr_blocks": [
                  "142.232.0.0/16",
                  "207.216.90.233/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "327820480203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "a03_be_sg"
            },
            "tags_all": {
              "Name": "a03_be_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "a03_db_1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group/sg-0c87dcce89a2cf88d",
            "description": "allow port 3306 from be subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0c87dcce89a2cf88d",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-port-3306",
            "name_prefix": "",
            "owner_id": "327820480203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "a03_db_1_sg"
            },
            "tags_all": {
              "Name": "a03_db_1_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "a03_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group/sg-035ae3a1eaf9bd74a",
            "description": "allow ssh from home and work / http from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035ae3a1eaf9bd74a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "142.232.0.0/16",
                  "207.216.90.233/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-ssh-http",
            "name_prefix": "",
            "owner_id": "327820480203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "a03_web_sg"
            },
            "tags_all": {
              "Name": "a03_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe259d19fb37935e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "a03_be_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-0302eccdb4ffab9c2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0302eccdb4ffab9c2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-001f942907d189a84",
            "security_group_rule_id": "sgr-0302eccdb4ffab9c2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_be_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "a03_db_1_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-0b2a31cd5fa0e8cd6",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0b2a31cd5fa0e8cd6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c87dcce89a2cf88d",
            "security_group_rule_id": "sgr-0b2a31cd5fa0e8cd6",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_db_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "a03_web_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-0153fb079aefaf251",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0153fb079aefaf251",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035ae3a1eaf9bd74a",
            "security_group_rule_id": "sgr-0153fb079aefaf251",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_be_all_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-0365a6dea09726f00",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0365a6dea09726f00",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-001f942907d189a84",
            "security_group_rule_id": "sgr-0365a6dea09726f00",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_be_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_be_ssh_bcit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-0f9e066314797c3a1",
            "cidr_ipv4": "142.232.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f9e066314797c3a1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-001f942907d189a84",
            "security_group_rule_id": "sgr-0f9e066314797c3a1",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_be_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_be_ssh_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-058557d69c30b1b08",
            "cidr_ipv4": "207.216.90.233/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-058557d69c30b1b08",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-001f942907d189a84",
            "security_group_rule_id": "sgr-058557d69c30b1b08",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_be_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_db_1_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-003f72cb9a1b1203b",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-003f72cb9a1b1203b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c87dcce89a2cf88d",
            "security_group_rule_id": "sgr-003f72cb9a1b1203b",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_db_1_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_web_from_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-06170211093658c66",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06170211093658c66",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035ae3a1eaf9bd74a",
            "security_group_rule_id": "sgr-06170211093658c66",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-0f8d50f8570a46d88",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f8d50f8570a46d88",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035ae3a1eaf9bd74a",
            "security_group_rule_id": "sgr-0f8d50f8570a46d88",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_web_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-01e652a11b6af32f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-01e652a11b6af32f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035ae3a1eaf9bd74a",
            "security_group_rule_id": "sgr-01e652a11b6af32f2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_web_ssh_bcit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-006dd1440c3855a4b",
            "cidr_ipv4": "142.232.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-006dd1440c3855a4b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035ae3a1eaf9bd74a",
            "security_group_rule_id": "sgr-006dd1440c3855a4b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "a03_web_ssh_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:327820480203:security-group-rule/sgr-00d1c9c1da9621cba",
            "cidr_ipv4": "207.216.90.233/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00d1c9c1da9621cba",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-035ae3a1eaf9bd74a",
            "security_group_rule_id": "sgr-00d1c9c1da9621cba",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.a03_vpc",
            "module.security_group.aws_security_group.a03_web_sg"
          ]
        }
      ]
    }
  ]
}